agregue toda la estructura principal

--- a/index.html
+++ b/index.html
@@ -9,6 +9,91 @@
     <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Joel Dario Muñoz</h1>
+        <nav>
+            <ul>
+                <li>Sobre mi</li>
+                <li>Skills</li>
+                <li>Hobbies</li>
+                <li>Formación</li>
+                <li>Proyectos</li>
+                <li>Contácto</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Hola, soy <b>Joel Dario Muñoz</b>, soy desarrollador web</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis veniam praesentium perspiciatis libero, aspernatur tenetur sunt dolor amet vel sint! Tempora ipsum minima, placeat eaque corrupti explicabo molestiae ea obcaecati.</p>
+            <ul>
+                <li>GitHub</li>
+                <li>LinkeIn</li>
+                <li>CV</li>
+            </ul>
+            <img src="images/favicon.jpg" alt="rostro en primer plano">
+        </section>
+        <section>
+            <h3>Sobre mi</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam sunt odit dolor. Ipsam illo aliquid, iure autem exercitationem nemo, repudiandae earum veritatis qui magnam esse hic velit. Veniam, harum ut!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis assumenda nam, autem odio molestiae dignissimos quibusdam! Nihil fugit at possimus recusandae cupiditate cum ipsam delectus repudiandae, facilis velit minima. Rerum!</p>
+        </section>
+        <section>
+            <h3>Skills</h3>
+            <ul>
+                <li>HTML5</li>
+                <li>CSS(Tailwind</li>
+                <li>PHP</li>
+                <li>MySQl</li>
+                <li>JavaScritp</li>
+                <li>GitHub</li>
+                <li>Linux</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Hobbies</h3>
+            <ul>
+                <li>Tocar guitarra</li>
+                <li>Escuchar música</li>
+                <li>Componer música</li>
+                <li>leer</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Formación académica</h3>
+            <ul>
+                <li>Alura</li>
+                <li>CSS3(Tailwind)</li>
+                <li>HTML5</li>
+                <li>PHP/MySQL</li>
+                <li>Java</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Experiencia profesional</h3>
+            <ul>
+                <li>Código secreto</li>
+                <li>Juego del Ahorcado</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Contacto</h3>
+            <p>Para contactarme llená el siguiente formulario</p>
+            <form>
+                <label for="nombre">Nombre</label>
+                <input type="text" id="nombre">
+                <label for="email">E-mail</label>
+                <input type="text" id="email">
+                <label for="asunto">Asunto</label>
+                <input type="text" id="asunto">
+                <label for="mensaje">Mensaje</label>
+                <textarea name="" id="mensaje" cols="30" rows="10"></textarea>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </main>
+    <footer>
+        <p>&#169 Creado por Joel Dario Muñoz <time>2022</time></p>
+    </footer>
 </body>
 </html>
