agregue la carpeta de iconos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <section>
-            <h2>Hola, soy <b>Joel Dario Muñoz</b>, soy desarrollador web</h2>
+            <h2>Hola, soy <b>Joel Dario Muñoz</b>, desarrollador web</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis veniam praesentium perspiciatis libero, aspernatur tenetur sunt dolor amet vel sint! Tempora ipsum minima, placeat eaque corrupti explicabo molestiae ea obcaecati.</p>
             <ul>
                 <li>GitHub</li>
@@ -41,7 +41,7 @@
         <section>
             <h3>Skills</h3>
             <ul>
-                <li>HTML5</li>
+                <li><h4>HTML5</h4></li>
                 <li>CSS(Tailwind</li>
                 <li>PHP</li>
                 <li>MySQl</li>
