complete la seccion de hobbies

--- a/index.html
+++ b/index.html
@@ -41,22 +41,59 @@
         <section>
             <h3>Skills</h3>
             <ul>
-                <li><h4>HTML5</h4></li>
-                <li>CSS(Tailwind</li>
-                <li>PHP</li>
-                <li>MySQl</li>
-                <li>JavaScritp</li>
-                <li>GitHub</li>
-                <li>Linux</li>
+                <li>
+                    <img src="images/iconos/html5Icono.png" alt="logo HTML5">
+                    <h4>HTML5</h4>
+                </li>
+                <li>
+                    <img src="images/iconos/css3Icono.png" alt="logo CSS3">
+                    <h4>CSS(Tailwind)</h4>
+                </li>
+                <li>
+                    <img src="images/iconos/phpIcono.png" alt="logo PHP">
+                    <h4>PHP</h4>
+                </li>
+                <li>
+                    <img src="images/iconos/mysqlIcono.png" alt="logo mysql">
+                    <h4>My/SQL</h4>
+                </li>
+                <li>
+                    <img src="images/iconos/JSIcono.png" alt="logo JS">
+                    <h4>JavaScript</h4>
+                </li>
+                <li>
+                    <img src="images/iconos/githubIcono.png" alt="logo GitHub">
+                    <h4>GitHub</h4>
+                </li>
+                <li>
+                    <img src="images/iconos/linuxIcono.png" alt="logo Linux">
+                    <h4>Linux</h4>
+                </li>
             </ul>
         </section>
         <section>
             <h3>Hobbies</h3>
             <ul>
-                <li>Tocar guitarra</li>
-                <li>Escuchar música</li>
-                <li>Componer música</li>
-                <li>leer</li>
+                <li>
+                    <img src="images/iconos/guitarplayer.svg" alt="tocar guitarra">
+                    <h4>Tocar guitarra</h4>
+                </li>
+                <li>
+                    <img src="images/iconos/escucharMusica.svg" alt="escuchar musica">
+                    <h4>Escuchar música</h4> 
+                </li>
+                <li>
+                    <img src="images/iconos/componerMusica.svg" alt="componer música">
+                    <h4>Componer música</h4>
+                </li>
+                <li>
+                    <img src="images/iconos/bici.svg" alt="bici">
+                    <h4>Andar en bici</h4>
+                </li>
+                <li>
+                    <img src="images/iconos/leer.svg" alt="leer">
+                    <h4>Leer</h4>
+                </li>
             </ul>
         </section>
         <section>
