agregue estilo al nav y presentacion

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joel | Programador</title>
+    <title>Joel | Web Developer</title>
     <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -13,39 +13,56 @@
 </head>
 <body>
     <header class="navegacion">
-        <h1 class="titulo-principal">Joel Dario Muñoz</h1><nav>
+        <h1 class="titulo-principal"><b>※</b> Joel Dario Muñoz</h1><nav>
             <ul>
-                <li>Sobre mi</li>
-                <li>Skills</li>
-                <li>Hobbies</li>
-                <li>Formación</li>
-                <li>Proyectos</li>
-                <li>Contácto</li>
+                <li>
+                    <a href="#presentacion">Sobre mí</a>
+                </li>
+                <li>
+                    <a href="#skills">Skills</a>
+                </li>
+                <li>
+                    <a href="#hobbies">Hobbies</a>
+                </li>
+                <li>
+                    <a href="#formacion">Formación</a>
+                </li>
+                <li>
+                    <a href="#experiencia">Proyectos</a>
+                </li>
+                <li>
+                    <a href="#contacto">Contácto</a>
+                </li>
             </ul>
         </nav>
     </header>
     <main class="principal">
-        <section class="presentacion">
+        <section id="presentacion" class="presentacion">
             <div>
                 <div class="presentacion-texto">
                     <div class="presentacion-texto-interior">
-                        <h2><b>Joel Dario Muñoz</b>, desarrollador web</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis veniam praesentium perspiciatis libero, aspernatur tenetur sunt dolor amet vel sint! Tempora ipsum minima, placeat eaque corrupti explicabo molestiae ea obcaecati.</p>
+                        <h2><b class="nombre">Joel Dario Muñoz</b> web developer</h2>
                         <ul>
-                            <li>GitHub↗</li>
-                            <li>LinkeIn↗</li>
-                            <li>CV↗</li>
+                            <li>
+                                <a href="https://github.com/" target="_blank">GitHub↗</a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/joel-dario-mu%C3%B1oz-68b173180/" target="_blank">LinkedIn↗</a>
+                            </li>
+                            <li>
+                                <a href="images/CVJoelMuñoz.png" target="_blank">CV↗</a>
+                            </li>
                         </ul>
                     </div>
                 </div><img src="images/favicon.jpg" alt="rostro en primer plano">
             </div>
             <div class="sobre-mi">
-                <h3>Sobre mi</h3>
+                <h3>Sobre mí</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam sunt odit dolor. Ipsam illo aliquid, iure autem exercitationem nemo, repudiandae earum veritatis qui magnam esse hic velit. Veniam, harum ut!</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis assumenda nam, autem odio molestiae dignissimos quibusdam! Nihil fugit at possimus recusandae cupiditate cum ipsam delectus repudiandae, facilis velit minima. Rerum!</p>
             </div>
         </section>
-        <section class="skills">
+        <section id="skills" class="skills">
             <h3 class="titulo-seccion">Skills</h3>
             <ul>
                 <li>
@@ -78,7 +95,7 @@
                 </li>
             </ul>
         </section>
-        <section class="hobbies">
+        <section id="hobbies" class="hobbies">
             <h3 class="titulo-seccion">Hobbies</h3>
             <ul>
                 <li>
@@ -103,52 +120,64 @@
                 </li>
             </ul>
         </section>
-        <section class="formacion">
+        <section id="formacion" class="formacion">
             <h3 class="titulo-seccion">Formación IT</h3>
             <ul>
                 <div class="fila-1">
                     <li>
-                        <img src="images/iconos/alura.jpg" alt="logo alura">
-                        <h4>Alura</h4>
-                        <p>Programador Web Full Stack</p>
-                        <p>ONE - Oracle Next Eduducation</p>
+                        <a href="https://www.youtube.com/c/Alura" target="_blank">
+                            <img src="images/iconos/alura.jpg" alt="logo alura">
+                            <h4>Alura</h4>
+                            <p>Programador Web Full Stack</p>
+                            <p>ONE - Oracle Next Eduducation</p>
+                        </a>
                     </li>
                     <li>
-                        <img src="images/iconos/codersFree.jpg" alt="logo coders free">
-                        <h4>Coders Free</h4>
-                        <p>Tailwind CSS3</p>
-                        <p>Autodidacta</p>
+                        <a href="https://www.youtube.com/c/CodersFree" target="_blank">
+                            <img src="images/iconos/codersFree.jpg" alt="logo coders free">
+                            <h4>Coders Free</h4>
+                            <p>Tailwind CSS3</p>
+                            <p>Autodidacta</p>
+                        </a>
                     </li>
                     <li>
-                        <img src="images/iconos/dorianDesings.jpg" alt="logo dorian">
-                        <h4>Dorian Desings</h4>
-                        <p>HTML5</p>
-                        <p>Autodidacta</p>
+                        <a href="https://www.youtube.com/c/DorianDesings" target="_blank" rel="noopener noreferrer">
+                            <img src="images/iconos/dorianDesings.jpg" alt="logo dorian">
+                            <h4>Dorian Desings</h4>
+                            <p>HTML5</p>
+                            <p>Autodidacta</p>
+                        </a>
                     </li>
                 </div>
                 <div class="fila-2">
                     <li>
-                        <img src="images/iconos/pildorasInformaticas.jpg" alt="logo pildoras informaticas">
-                        <h4>Pildoras Informáticas</h4>
-                        <p>PHP/MySQL</p>
-                        <p>Autodidacta</p>
+                        <a href="https://www.youtube.com/c/pildorasinformaticas" target="_blank">
+                            <img src="images/iconos/pildorasInformaticas.jpg" alt="logo pildoras informaticas">
+                            <h4>Pildoras Informáticas</h4>
+                            <p>PHP/MySQL</p>
+                            <p>Autodidacta</p>
+                        </a>
                     </li>
                     <li>
-                        <img src="images/iconos/wikipediaErnesto.jpg" alt="logo wikipedia de Ernesto">
-                        <h4>Wikipedia de Ernesto</h4>
-                        <p>Java inicial</p>
-                        <p>Autodidacta</p>
+                        <a href="https://www.youtube.com/c/ErnestoP%C3%A9rezM" target="_blank">
+                            <img src="images/iconos/wikipediaErnesto.jpg" alt="logo wikipedia de Ernesto">
+                            <h4>Wikipedia de Ernesto</h4>
+                            <p>Java inicial</p>
+                            <p>Autodidacta</p>
+                        </a>
                     </li>
                     <li>
-                        <img src="images/iconos/freeCodeCamp.jpg" alt="logo free code camp">
-                        <h4>Free Code Camp</h4>
-                        <p>Java Script inicial</p>
-                        <p>Autodidacta</p>
+                        <a href="https://www.youtube.com/c/Freecodecamp" target="_blank">
+                            <img src="images/iconos/freeCodeCamp.jpg" alt="logo free code camp">
+                            <h4>Free Code Camp</h4>
+                            <p>Java Script inicial</p>
+                            <p>Autodidacta</p>
+                        </a>
                     </li>
                 </div>
             </ul>
         </section>
-        <section class="experiencia">
+        <section id="experiencia" class="experiencia">
             <h3 class="titulo-seccion">Experiencia profesional</h3>
             <ul>
                 <li>
@@ -163,7 +192,7 @@
                 </li>
             </ul>
         </section>
-        <section class="contacto">
+        <section id="contacto" class="contacto">
             <h3 class="titulo-seccion">Contacto</h3>
             <p>Llená el formulario, te respondo en breve</p>
             <form>
