agregue texto a la seccion sobre mi

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div>
                 <div class="presentacion-texto">
                     <div class="presentacion-texto-interior">
-                        <h2><b class="nombre">Joel Dario Muñoz</b> web developer</h2>
+                        <h2><div class="nombre">Joel Dario Muñoz</div> web developer</h2>
                         <ul>
                             <li>
                                 <a href="https://github.com/" target="_blank">GitHub↗</a>
@@ -58,8 +58,8 @@
             </div>
             <div class="sobre-mi">
                 <h3>Sobre mí</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam sunt odit dolor. Ipsam illo aliquid, iure autem exercitationem nemo, repudiandae earum veritatis qui magnam esse hic velit. Veniam, harum ut!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis assumenda nam, autem odio molestiae dignissimos quibusdam! Nihil fugit at possimus recusandae cupiditate cum ipsam delectus repudiandae, facilis velit minima. Rerum!</p>
+                <p>Soy desarrollador web full stack. Poseo conocimientos en HTML5, CSS3 con Tailwind o nativo y JavaScript para el Front End. En el Back End utilizo PHP nativo y MySQL para el manejo de bases de datos. Mi entorno de desarrollo es Linux preferentemente.</p>
+                <p>Mi intención es poner en práctica todo lo aprendido y seguir profundizando mis conocimientos en las distintas tecnologías para brindar soluciones ágiles y óptimas a cualquier necesidad en la web.</p>
             </div>
         </section>
         <section id="skills" class="skills">
