agregue mas estilo a las skills y hobbies, y reordene las secciones en el html

--- a/index.html
+++ b/index.html
@@ -95,28 +95,18 @@
                 </li>
             </ul>
         </section>
-        <section id="hobbies" class="hobbies">
-            <h3 class="titulo-seccion">Hobbies</h3>
+        <section id="experiencia" class="experiencia">
+            <h3 class="titulo-seccion">Experiencia profesional</h3>
             <ul>
                 <li>
-                    <img src="images/iconos/guitarplayer.svg" alt="tocar guitarra">
-                    <h4>Tocar guitarra</h4>
+                    <a href="https://jdario9912.github.io/Juego-del-ahoracado-Alura/" target="_blank">
+                        <img src="images/ahorcado.png" alt="juego ahorcado">
+                    </a>
                 </li>
                 <li>
-                    <img src="images/iconos/escucharMusica.svg" alt="escuchar musica">
-                    <h4>Escuchar música</h4> 
-                </li>
-                <li>
-                    <img src="images/iconos/componerMusica.svg" alt="componer música">
-                    <h4>Componer música</h4>
-                </li>
-                <li>
-                    <img src="images/iconos/bici.svg" alt="bici">
-                    <h4>Andar en bici</h4>
-                </li>
-                <li>
-                    <img src="images/iconos/leer.svg" alt="leer">
-                    <h4>Leer</h4>
+                    <a href="https://jdario9912.github.io/Primer-challenge-Alura-Latam/" target="_blanck">
+                        <img src="images/codigoSecreto.png" alt="juego codigo secreto">
+                    </a>
                 </li>
             </ul>
         </section>
@@ -177,18 +167,28 @@
                 </div>
             </ul>
         </section>
-        <section id="experiencia" class="experiencia">
-            <h3 class="titulo-seccion">Experiencia profesional</h3>
+        <section id="hobbies" class="hobbies">
+            <h3 class="titulo-seccion">Hobbies</h3>
             <ul>
                 <li>
-                    <a href="https://jdario9912.github.io/Juego-del-ahoracado-Alura/" target="_blank">
-                        <img src="images/ahorcado.png" alt="juego ahorcado">
-                    </a>
+                    <img src="images/iconos/guitarplayer.svg" alt="tocar guitarra">
+                    <h4>Tocar guitarra</h4>
                 </li>
                 <li>
-                    <a href="https://jdario9912.github.io/Primer-challenge-Alura-Latam/" target="_blanck">
-                        <img src="images/codigoSecreto.png" alt="juego codigo secreto">
-                    </a>
+                    <img src="images/iconos/escucharMusica.svg" alt="escuchar musica">
+                    <h4>Escuchar música</h4> 
+                </li>
+                <li>
+                    <img src="images/iconos/componerMusica.svg" alt="componer música">
+                    <h4>Hacer música</h4>
+                </li>
+                <li>
+                    <img src="images/iconos/bici.svg" alt="bici">
+                    <h4>Andar en bici</h4>
+                </li>
+                <li>
+                    <img src="images/iconos/leer.svg" alt="leer">
+                    <h4>Leer</h4>
                 </li>
             </ul>
         </section>
